name:                dmx
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          jeremy@n-heptane.com
category:            Lighting
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     DMX
  build-depends:       base >=4.9 && <4.12,
                       hmidi,
                       vector >=0.11 && <0.13,
                       serialport >= 0.4  && < 0.5
  default-language:    Haskell2010
